changes for auth 0

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "DB": {
     "gearhost": "server=den1.mysql6.gear.host;port=3306;database=harbinger666;user id=harbinger666;password=Ua46o~s6d~HL"
+  },
+  "Auth0": {
+    "Domain": "codeworksclassroom.auth0.com",
+    "Audience": "https://codeworksclassroom.com",
+    "ClientId": "pOXw2OGv1LsYi7LEBmDF04RLkXQvldml"
   }
 }
