--- a/contractorserver.csproj
+++ b/contractorserver.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CodeWorks.Auth0Provider" Version="1.0.0" />
     <PackageReference Include="dapper" Version="2.0.35" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
     <PackageReference Include="MySqlConnector" Version="1.0.1" />
   </ItemGroup>
 
