Profile Con, Serv, Repo Added

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,8 +10,8 @@
     "gearhost": "server=den1.mysql6.gear.host;port=3306;database=harbinger666;user id=harbinger666;password=Ua46o~s6d~HL"
   },
   "Auth0": {
-    "Domain": "codeworksclassroom.auth0.com",
-    "Audience": "https://codeworksclassroom.com",
-    "ClientId": "pOXw2OGv1LsYi7LEBmDF04RLkXQvldml"
+    "Domain": "dev-tunnelvision77.us.auth0.com",
+    "Audience": "https://contractor.com",
+    "ClientId": "0gxN8pf6A7r45UT4uALYbHsJ9R8WuxbE"
   }
 }
